# predictive-maintenance-lstm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: data_preparation.ipynb  exploratory_analysis.ipynb  test_model.ipynb  train_model.ipynb  visualization_results.ipynb
src/predictive_maintenance/: __init__.py  config.py  data.py  models.py  visualization.py
